--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -2,7 +2,9 @@
 [redshift]
 ; Set the day and night screen temperatures (neutral is 6500K)
 temp-day=6500
-temp-night=3500
+temp-night=4500
+dawn-time=06:30-08:00
+dusk-time=19:00-22:00
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
@@ -22,7 +24,7 @@ brightness-night=0.7
 ; This can also be set individually for day and night since
 ; version 1.10.
 gamma-day=1.0
-gamma-night=0.8
+gamma-night=0.7
 
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
@@ -42,8 +44,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=46.3
-lon=2.6
+lat=0
+lon=0
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
