--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -211,7 +211,7 @@ colors:
   # background is unset, selection color will be the inverse of the cell colors.
   # If only text is unset the cell text color will remain the same.
   selection:
-  #  text: '0xeaeaea'
+    text: '0xeaeaea'
     background: '0x404040'
 
   # Normal colors
